
  * Expand the list of wireless networks under each card automatically,
    unless the user has explicitly collapsed the row.
  * Translate the entire wireless networking page.
  * Don't show the picture taking page when running in an oem-config
    install.
  * Don't show the wireless page if a wireless connection was made after
    ubiquity started (LP: #873000).

 -- Evan Dandrea <ev@ubuntu.com>  Wed, 12 Oct 2011 11:58:10 +0100

ubiquity (2.8.7) oneiric; urgency=low

  * If oem-config/enable doesn't exist, assume it's not set
    (LP: #872119).

 -- Evan Dandrea <ev@ubuntu.com>  Tue, 11 Oct 2011 09:08:21 +0100

ubiquity (2.8.6) oneiric; urgency=low

  * Don't crash if the user selects the wireless card header and presses
    next (LP: #838048).
  * If the user selects a wireless card header, the next button text
    should not be 'Connect.'
  * Don't copy the wireless configuration if this is an OEM install
    (LP: #870177).
  * Make sure the connecting spinner goes away before leaving the
    wireless page.
  * Account for the 'asleep' network-manager state.

 -- Evan Dandrea <ev@ubuntu.com>  Mon, 10 Oct 2011 17:58:39 +0100

ubiquity (2.8.5) oneiric; urgency=low

  * Disable alpha warning for release.
  * Automatic update of included source packages: netcfg 1.68ubuntu7.

 -- Stéphane Graber <stgraber@ubuntu.com>  Mon, 10 Oct 2011 11:18:56 +0100

ubiquity (2.8.4) oneiric; urgency=low

  [ Evan Dandrea ]
  * Handle the keyboard query window closed callback being fired twice
    (LP: #865493).
  * Allow focusing of labels when we're in the screen reader
    acessibility profile, so that Orca can read them
    (LP: #856782, LP: #856773).
  * Make sure we account for the size of the installation and swap
    partition when calculating the bounds for the partition resizer
    (LP: #769350).

  [ Colin Watson ]
  * Don't install duplicate copies of console-setup-apply,
    localechooser-apply, and netcfg-wrapper.