@@ -7,6 +7,8 @@ ubiquity (2.8.8) UNRELEASED; urgency=low
     install.
   * Don't show the wireless page if a wireless connection was made after
     ubiquity started (LP: #873000).
+  * Ensure that the user picture is owned by the target user
+    (LP: #872966).
 
  -- Evan Dandrea <ev@ubuntu.com>  Wed, 12 Oct 2011 11:58:10 +0100
 
